Fixed navigation jump on load

--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -1,9 +1,10 @@
 .gi-header {
   overflow: hidden;
   background: #333;
-  position: static;
+  position: absolute;
   z-index: 2;
   height: 3.4rem;
+  width: 100%;
   -moz-transition: box-shadow 0.2s linear;
   -ms-transition: box-shadow 0.2s linear;
   -o-transition: box-shadow 0.2s linear;
