--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -23,6 +23,7 @@
   background: #333;
   color: #efefef;
   font-size: 10px;
+  position: relative;
 }
 
 #content .gi-interactive {
